Mon Apr 14 18:50:15 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enum.c: New methods: Enumerable#one?, #none?, #minmax, #min_by,
	  #max_by, #minmax_by and #cycle; backported from 1.9.

	* enum.c (enum_find_index): Add support for find_index(obj);
	  [ruby-dev:34313]; backported from 1.9.

	* enum.c (enum_inject): Add support for Enumerable#inject(:binop);
	  backported from 1.9.

	* enum.c: Alias Enumerable#reject to #inject; backported from 1.9.

Mon Apr 14 18:14:19 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enum.c (enum_find, enum_reject): Return an enumerator if no
	  block is given; backported from 1.9.

	* io.c (rb_io_each_line, rb_io_each_byte, rb_io_s_foreach,
	  argf_each_line, argf_each_byte): Ditto.

	* string.c (str_gsub): Ditto.

Mon Apr 14 18:10:05 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* enum.c (find_index_i, find_index_iter_i): add prototype for VC.

Mon Apr 14 17:55:30 2008  Akinori MUSHA  <knu@iDaemons.org>

	* array.c (rb_ary_collect_bang, rb_ary_select): Return an
	  enumerator if no block is given; backported from 1.9.

	* dir.c (dir_each, dir_foreach): Ditto.

	* enum.c (enum_partition, enum_sort_by): Ditto.

	* gc.c (os_each_obj): Ditto.

	* hash.c (rb_hash_delete_if, rb_hash_reject_bang, rb_hash_select,
	  rb_hash_each_value, rb_hash_each_key, rb_hash_each_pair,
	  env_each_key, env_each_value, env_each, env_each_pair,
	  env_reject_bang, env_delete_if, env_select): Ditto.

	* numeric.c (num_step, int_upto, int_downto, int_dotimes): Ditto.

Mon Apr 14 16:42:53 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ruby.h (rb_block_call_func): Fix prototype.

	* enumerator.c (enumerator_iter_i, enumerator_each_i): Ditto.

Mon Apr 14 15:49:05 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enum.c (enum_count, enum_find_index): New methods:
	  Enumerable#count and #find_index; backported from 1.9.

Mon Apr 14 14:16:08 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* enumerator.c (enumerator_mark, enumerator_iter_i, enumerator_each_i,