@@ -1,3 +1,9 @@
+Mon Apr 14 19:10:47 2008  Akinori MUSHA  <knu@iDaemons.org>
+
+	* enum.c New methods: Enumerable#take, #take_while, #drop and
+	  #drop_while; backported from 1.9.
+
+
 Mon Apr 14 18:50:15 2008  Akinori MUSHA  <knu@iDaemons.org>
 
 	* enum.c: New methods: Enumerable#one?, #none?, #minmax, #min_by,
